miniextendr-macros/tests/ui/derive_dataframe_generic_enum.stderr
error: DataFrameRow does not support type or const generic parameters
 --> tests/ui/derive_dataframe_generic_enum.rs:6:11
  |
6 | enum Event<T> {
  |           ^^^
